@startuml
' Title for the diagram
title High-Level Domain Model

' Skin parameters for a cleaner, more professional look
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 10
skinparam class {
    ArrowColor #666666
    BorderColor #666666
}
skinparam note {
    BackgroundColor #LightYellow
    BorderColor #666666
}

' --- Explanatory Note for Custom Entities ---
note as ConventionNote
  <b>Diagram Convention:</b>
  For clarity, common base properties
  (like Id, CreatedOn, IsDeleted)
  are omitted from the custom domain
  entities below (Category, Service, etc.).
end note

' --- Identity & User Management ---

class ApplicationUser {
  + string Id
  + string FirstName
  + string LastName
  + string Email
}

class ApplicationRole {
  + string Id
  + string Name
}

' --- Core Domain Entities ---

class Category {
  + string Name
  + string? Description
}

class Service {
  + string Name
  + decimal Price
  + int DurationInMinutes
  + bool IsOnline
  + bool IsActive
}

class OperatingHour {
  + DayOfWeek DayOfWeek
}

class OperatingSegment {
  + TimeOnly StartTime
  + TimeOnly EndTime
}

class ScheduleOverride {
  + DateOnly Date
  + bool IsDayOff
}

class OverrideSegment {
  + TimeOnly StartTime
  + TimeOnly EndTime
}

class ServiceImage {
  + string ImageUrl
  + bool IsThumbnail
}

class Booking {
  + DateTime BookingStart
  + BookingStatus Status
  + string? Notes
}

class Review {
  + int Rating
  + string? Comment
}

' --- Relationships ---

' Identity
ApplicationUser "*" -- "*" ApplicationRole : (has)

' Service Management
Category "1" -- "*" Service
ApplicationUser "1" -- "*" Service : (Provider)
Service "1" -- "*" OperatingHour
OperatingHour "1" -- "*" OperatingSegment
Service "1" -- "*" ScheduleOverride
ScheduleOverride "1" -- "*" OverrideSegment
Service "1" -- "*" ServiceImage

' Booking Flow
ApplicationUser "1" -- "*" Booking : (Customer)
Service "1" -- "*" Booking
Booking "1" -- "0..1" Review : (Feedback)

' Review links (redundant but explicit in DB)
ApplicationUser "1" -- "*" Review : (Author)
Service "1" -- "*" Review : (Target)

@enduml